# whisprd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WHISPRD_SETUP_GUIDE.md  cleanup_git.sh  config.yaml  demo_gui.py  detect_scaling.py  dictation.service  dictation_cli.py  dictation_prompts.yaml  install.sh  pyproject.toml  whisprd.service  whisprd_cli.py  whisprd_gui.py  whisprd_prompts.yaml
dictation/: __init__.py  audio_capture.py  command_processor.py  config.py  dictation_engine.py  hotkey_manager.py  keystroke_injector.py
tests/: README.md  __init__.py  conftest.py
tests/gui/: __init__.py  test_gui_components.py
tests/integration/: __init__.py  test_dictation_engine.py
tests/unit/: __init__.py  test_audio_capture.py  test_command_processor.py  test_config.py  test_hotkey_manager.py  test_keystroke_injector.py  test_whisper_transcriber.py
tests/utils/: __init__.py  test_utils.py
whisprd/: __init__.py  config.py  dictation_engine.py  whisper_transcriber.py
whisprd/gui/: __init__.py  config_panel.py  control_panel.py  main_window.py  status_panel.py  transcription_panel.py
