[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisprd"
version = "1.0.0"
description = "Real-time Whisper-powered dictation system for Linux - a personal project by @AgenticToaster"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgenticToaster", email = "agentictoaster@gmail.com"}
]
maintainers = [
    {name = "AgenticToaster", email = "agentictoaster@gmail.com"}
]
keywords = ["dictation", "speech-to-text", "whisper", "linux", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "numpy<2",
    "PyYAML>=6.0.1",
    "python-uinput>=0.11.2",
    "pynput>=1.7.6",
    "psutil>=5.9.5",
    "click>=8.1.7",
    "rich>=13.5.2",
    "torch==2.2.0",
    "dearpygui>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
cuda = [
    "torch>=2.0.0",
]
# GUI dependencies are provided by system packages, not pip/uv
# gui = [
#     "PyGObject>=3.42.0",
#     "matplotlib>=3.7.0",
# ]

[project.scripts]
whisprd = "whisprd_cli:main"
whisprd-gui = "whisprd_gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/whisprd"
Repository = "https://github.com/yourusername/whisprd"
Issues = "https://github.com/yourusername/whisprd/issues"
Documentation = "https://github.com/yourusername/whisprd#readme"

[tool.hatch.build.targets.wheel]
packages = ["whisprd"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["whisprd"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "faster_whisper.*",
    "uinput.*",
    "pynput.*",
    "yaml.*",
    "torch.*",
    "dearpygui.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=whisprd",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
